# RP2040-Base-Template

./: .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  common.h  freertos_utils.h  project_config.h
lib/audio/: CMakeLists.txt
lib/audio/include/: audio_subsystem.h
lib/audio/src/: audio_subsystem.cpp
lib/oled_ssd1306/: CMakeLists.txt
src/: freertos_utils.cpp  main.cpp
